refactor navbar page

--- a/atomic-package-docs/parts/_box.scss
+++ b/atomic-package-docs/parts/_box.scss
@@ -11,7 +11,9 @@
   }
 
   &.docs {
-    margin-left: $docsSideBarWidth;
+    float: left;
+    width: $docsSiteContentWidth - $docsSideBarWidth;
+    //margin-left: $docsSideBarWidth;
 
     > h2 {
       margin-bottom: 20px;
