refactor icon layout

--- a/atomic-package-docs/parts/_list.scss
+++ b/atomic-package-docs/parts/_list.scss
@@ -11,3 +11,13 @@
     }
   }
 }
+
+.docsIconList {
+  display: flex;
+  flex-wrap: wrap;
+  li {
+    width: 200px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
+}
