--- a/atomic-package/parts/_navigation_menu.scss
+++ b/atomic-package/parts/_navigation_menu.scss
@@ -13,6 +13,7 @@
   flex: 1;
   .menuList {
     display: flex;
+    padding: 0 20px;
     > li {
       a {
         display: inline-block;
@@ -25,6 +26,7 @@
     }
 
     &.right {
+      padding: 0;
       justify-content: flex-end;
     }
 
