create form style

--- a/src/scss/atomic-package/base/_mixin.scss
+++ b/src/scss/atomic-package/base/_mixin.scss
@@ -31,3 +31,21 @@
     font-size: $size * 2;
   }
 }
+
+@mixin borderColorClass {
+  &.primary {
+    border-color: $colorPrimary;
+  }
+  &.green {
+    border-color: $colorGreen;
+  }
+  &.blue {
+    border-color: $colorBlue;
+  }
+  &.orange {
+    border-color: $colorOrange;
+  }
+  &.red {
+    border-color: $colorRed;
+  }
+}
