--- a/src/scss/atomic-package/parts/_form.scss
+++ b/src/scss/atomic-package/parts/_form.scss
@@ -16,8 +16,9 @@ input[type="checkbox"] {
   width: 20px;
   height: 20px;
   border-radius: 2px;
-  border: #D9D9D9 2px solid;
-  background: #F9F9F9;
+  //border: #D9D9D9 1px solid;
+  border: #ccc 1px solid;
+  background: #fafafa;
   &:checked {
     background: #D8D8D8;
     &::before {
@@ -149,7 +150,8 @@ input[type="radio"] {
   position: relative;
   width: 20px;
   height: 20px;
-  border: #DCE4EC 2px solid;
+  //border: #DCE4EC 1px solid;
+  border: #ccc 1px solid;
   border-radius: 10px;
   background: #fff;
   &:focus {
@@ -158,12 +160,13 @@ input[type="radio"] {
   &:checked {
     &::before {
       @include createStyle;
-      top: 2px;
-      left: 2px;
+      top: 3px;
+      left: 3px;
       width: 12px;
       height: 12px;
       border-radius: 6px;
-      background: #DCE4EC;
+      //background: #DCE4EC;
+      background: #ccc;
     }
   }
 
@@ -220,8 +223,8 @@ input[type="radio"] {
     border-radius: $radioBtnMini / 2;
     &:checked {
       &::before {
-        top: 2px;
-        left: 2px;
+        top: 3px;
+        left: 3px;
         width: 4px;
         height: 4px;
         border-radius: 2px;
@@ -234,8 +237,8 @@ input[type="radio"] {
     border-radius: $radioBtnSmall / 2;
     &:checked {
       &::before {
-        top: 2px;
-        left: 2px;
+        top: 3px;
+        left: 3px;
         width: 8px;
         height: 8px;
         border-radius: 4px;
@@ -248,8 +251,8 @@ input[type="radio"] {
     border-radius: $radioBtnLarge / 2;
     &:checked {
       &::before {
-        top: 4px;
-        left: 4px;
+        top: 5px;
+        left: 5px;
         width: 28px;
         height: 28px;
         border-radius: 14px;
@@ -262,8 +265,8 @@ input[type="radio"] {
     border-radius: $radioBtnBig / 2;
     &:checked {
       &::before {
-        top: 8px;
-        left: 8px;
+        top: 9px;
+        left: 9px;
         width: 60px;
         height: 60px;
         border-radius: 30px;
@@ -685,6 +688,10 @@ select {
     line-height: 60px;
     font-size: 18px;
   }
+
+  /* State */
+  // color
+  @include borderColorClass;
 }
 
 /*
