--- a/src/scss/atomic-package/parts/_form.scss
+++ b/src/scss/atomic-package/parts/_form.scss
@@ -20,12 +20,14 @@ input[type="checkbox"] {
   border: #ccc 1px solid;
   background: #fafafa;
   &:checked {
-    background: #D8D8D8;
+    //background: #D8D8D8;
+    background: #1397E1;
+
     &::before {
       @include createStyle;
       width: 10px;
       height: 4px;
-      top: 4px;
+      top: 5px;
       left: 3px;
       border-left: 2px solid #fff;
       border-bottom: 2px solid #fff;
@@ -40,35 +42,35 @@ input[type="checkbox"] {
 
   /* skin */
   &.primary {
-    border: #2C3D50 2px solid;
+    border: #2C3D50 1px solid;
     background: #fff;
     &:checked {
       background: #2C3D50;
     }
   }
   &.green {
-    border: #17BC9C 2px solid;
+    border: #17BC9C 1px solid;
     background: #fff;
     &:checked {
       background: #17BC9C;
     }
   }
   &.blue {
-    border: #1397E1 2px solid;
+    border: #1397E1 1px solid;
     background: #fff;
     &:checked {
       background: #1397E1;
     }
   }
   &.orange {
-    border: #F39C12 2px solid;
+    border: #F39C12 1px solid;
     background: #fff;
     &:checked {
       background: #F39C12;
     }
   }
   &.red {
-    border: #E74C3C 2px solid;
+    border: #E74C3C 1px solid;
     background: #fff;
     &:checked {
       background: #E74C3C;
@@ -166,7 +168,8 @@ input[type="radio"] {
       height: 12px;
       border-radius: 6px;
       //background: #DCE4EC;
-      background: #ccc;
+      //background: #ccc;
+      background: #1397E1;
     }
   }
 
