add footer style

--- a/src/scss/atomic-package/parts/_footer.scss
+++ b/src/scss/atomic-package/parts/_footer.scss
@@ -2,11 +2,43 @@ footer {
 
   /* Atomic */
   &.footer {
-    padding: 20px 0;
-    border-top: #333 1px solid;
+    box-sizing: border-box;
+    min-height: 140px;
+    padding: 40px 60px;
+    background: #F8F8F8;
+
+    .title.footer {
+      & + .subTitle.footer {
+        margin-top: 12px;
+      }
+    }
+
+    .subTitle.footer {
+      color: #696969;
+    }
+
+    dl.menuList {
+      min-width: 140px;
+      color: #696969;
+
+      a {
+        color: #696969;
+      }
+    }
 
     .text.copy {
       text-align: center;
+    }
+
+    &.center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+
+      .wrap {
+
+      }
     }
   }
 
