--- a/src/scss/atomic-package/parts/_title.scss
+++ b/src/scss/atomic-package/parts/_title.scss
@@ -57,6 +57,11 @@
     text-align: center;
     line-height: 1.2;
   }
+
+  &.footer {
+    font-size: 32px;
+    color: #696969;
+  }
 }
 
 /* Atomic */
