refactor footer style & add helper style

--- a/src/scss/atomic-package/parts/_footer.scss
+++ b/src/scss/atomic-package/parts/_footer.scss
@@ -33,14 +33,19 @@ footer {
       // state Layout
       &.flex {
         display: flex;
-
         .wrap {
           flex: 1;
-
           &.right {
             display: flex;
             justify-content: flex-end;
           }
+        }
+      }
+
+      & > .wrap {
+        &.flex {
+          display: flex;
+          align-items: center;
         }
       }
     }
@@ -80,10 +85,5 @@ footer {
         color: #696969;
       }
     }
-
-    .text.copy {
-      text-align: center;
-    }
   }
-
 }
