--- a/src/scss/atomic-package/parts/_list.scss
+++ b/src/scss/atomic-package/parts/_list.scss
@@ -112,7 +112,22 @@
 
 
 .textList {
+  & > li {
+    & + li {
+      margin-top: 8px;
+    }
+  }
 
+  &.align {
+    display: flex;
+
+    & > li {
+      & + li {
+        margin-top: 0px;
+        padding-left: 12px;
+      }
+    }
+  }
 }
 
 .thumbnailList {
