--- a/src/scss/atomic-package/parts/_footer.scss
+++ b/src/scss/atomic-package/parts/_footer.scss
@@ -50,10 +50,13 @@ footer {
     }
 
     /* Module */
+    // Top
     .top {
       min-height: 50px;
       padding: 10px 60px;
     }
+
+    // Main
     .main {
       min-height: 140px;
       padding: 20px 60px;
@@ -93,6 +96,8 @@ footer {
         min-height: 350px;
       }
     }
+
+    // bottom
     .bottom {
       min-height: 50px;
       padding: 10px 60px;
@@ -105,6 +110,48 @@ footer {
 
       & + .menuList {
         margin-top: 35px;
+      }
+    }
+
+    // Top & Bottom
+    .top,
+    .bottom {
+
+      /* State */
+      // size
+      &.mini,
+      &.lower {
+        min-height: 10px;
+
+        .title.footer {
+          font-size: 12px;
+          & + .subTitle.footer {
+            margin-top: 8px;
+          }
+        }
+        .subTitle.footer {
+          font-size: 10px;
+        }
+      }
+      &.small,
+      &.low {
+        min-height: 20px;
+
+        .title.footer {
+          font-size: 20px;
+
+          & + .subTitle.footer {
+            margin-top: 8px;
+          }
+        }
+      }
+      &.large,
+      &.high {
+        min-height: 70px;
+      }
+      &.big,
+      &.lofty {
+        min-height: 100px;
       }
     }
 
@@ -147,6 +194,10 @@ footer {
       .main {
         min-height: 35px;
       }
+      .top,
+      .bottom {
+        min-height: 10px;
+      }
       .title.footer {
         font-size: 12px;
 
@@ -165,6 +216,10 @@ footer {
       .main {
         min-height: 35px;
       }
+      .top,
+      .bottom {
+        min-height: 20px;
+      }
       .title.footer {
         font-size: 20px;
 
@@ -180,6 +235,10 @@ footer {
       .main {
         min-height: 250px;
       }
+      .top,
+      .bottom {
+        min-height: 70px;
+      }
     }
     &.big,
     &.lofty {
@@ -187,6 +246,10 @@ footer {
 
       .main {
         min-height: 350px;
+      }
+      .top,
+      .bottom {
+        min-height: 100px;
       }
     }
   }
